actividad commit